adding ban, transfer and close messages to livechat on font app

--- a/src/Lily/AppBundle/Resources/views/themes/lily/index.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/index.html.twig
@@ -68,59 +68,62 @@
 
 	{% block templates %}
 		<!-- L'appel des différents scripts de vue -->
-		<script type="text/template" id="lily-page-avi-template">
-	        {% include 'LilyAppBundle:themes/lily/templates:avi.html.twig' with {'config': config,'chatAvailable': chatAvailable } %}
+			<script type="text/template" id="lily-page-avi-template">
+	      {% include 'LilyAppBundle:themes/lily/templates:avi.html.twig' with {'config': config,'chatAvailable': chatAvailable } %}
 	    </script>
 	    <script type="text/template" id="lily-page-chat-template">
-	        {% include 'LilyAppBundle:themes/lily/templates:chat.html.twig' with {'config': config } %}
+	      {% include 'LilyAppBundle:themes/lily/templates:chat.html.twig' with {'config': config } %}
 	    </script>
 	    <script type="text/template" id="lily-page-chat-welcome-screen">
-	        {% include 'LilyAppBundle:themes/lily/templates:chat_welcome_screen.html.twig' with {'config': config} %}
+	      {% include 'LilyAppBundle:themes/lily/templates:chat_welcome_screen.html.twig' with {'config': config} %}
 	    </script>
 	    <script type="text/template" id="lily-page-faq-template">
-	        {% include 'LilyAppBundle:themes/lily/templates:faq.html.twig' %}
+	      {% include 'LilyAppBundle:themes/lily/templates:faq.html.twig' %}
 	    </script>
 	    <script type="text/template" id="lily-page-mail-template">
-	        {% include 'LilyAppBundle:themes/lily/templates:mail.html.twig' %}
+	      {% include 'LilyAppBundle:themes/lily/templates:mail.html.twig' %}
 	    </script>
 	    <script type="text/template" id="lily-page-top-questions-template">
-	        {% include 'LilyAppBundle:themes/lily/templates:top_questions.html.twig' %}
+	      {% include 'LilyAppBundle:themes/lily/templates:top_questions.html.twig' %}
 	    </script>
-		<script type="text/template" id="lily-page-content-template">
-	        {% include 'LilyAppBundle:themes/lily/templates:content.html.twig' %}
+			<script type="text/template" id="lily-page-content-template">
+	      {% include 'LilyAppBundle:themes/lily/templates:content.html.twig' %}
 	    </script>
 	    <script type="text/template" id="lily-message-user">
-	        {% include 'LilyAppBundle:themes/lily/templates:message_user.html.twig' %}
+	      {% include 'LilyAppBundle:themes/lily/templates:message_user.html.twig' %}
 	    </script>
 	    <script type="text/template" id="lily-message-simple">
-	        {% include 'LilyAppBundle:themes:lily/templates/message_simple.html.twig' %}
+	      {% include 'LilyAppBundle:themes:lily/templates/message_simple.html.twig' %}
 	    </script>
 	    <script type="text/template" id="lily-message-precision">
-	        {% include 'LilyAppBundle:themes/lily/templates:message_precision.html.twig' %}
+	      {% include 'LilyAppBundle:themes/lily/templates:message_precision.html.twig' %}
 	    </script>
-		<script type="text/template" id="lily-message-redirection">
-	        {% include 'LilyAppBundle:themes/lily/templates:message_redirection.html.twig' %}
+			<script type="text/template" id="lily-message-redirection">
+	      {% include 'LilyAppBundle:themes/lily/templates:message_redirection.html.twig' %}
 	    </script>
-		<script type="text/template" id="lily-message-notation">
-	        {% include 'LilyAppBundle:themes/lily/templates:message_notation.html.twig' %}
+			<script type="text/template" id="lily-message-notation">
+	      {% include 'LilyAppBundle:themes/lily/templates:message_notation.html.twig' %}
 	    </script>
-		<script type="text/template" id="lily-message-completion">
-	        {% include 'LilyAppBundle:themes/lily/templates:message_completion.html.twig' %}
+			<script type="text/template" id="lily-message-completion">
+	      {% include 'LilyAppBundle:themes/lily/templates:message_completion.html.twig' %}
 	    </script>
 	    <script type="text/template" id="chat-message-visitor">
-	        {% include 'LilyAppBundle:themes:lily/templates/message_chat_visitor.html.twig' %}
+	      {% include 'LilyAppBundle:themes:lily/templates/message_chat_visitor.html.twig' %}
 	    </script>
 	    <script type="text/template" id="chat-message-operator">
-	        {% include 'LilyAppBundle:themes:lily/templates/message_chat_operator.html.twig' %}
+	      {% include 'LilyAppBundle:themes:lily/templates/message_chat_operator.html.twig' %}
 	    </script>
 	    <script type="text/template" id="chat-message-reconnect">
-	        {% include 'LilyAppBundle:themes:lily/templates/message_chat_reconnect.html.twig' %}
+	    	{% include 'LilyAppBundle:themes:lily/templates/message_chat_reconnect.html.twig' %}
 	    </script>
-	    	    <script type="text/template" id="chat-message-transfer">
+	    <script type="text/template" id="chat-message-transfer">
 	        {% include 'LilyAppBundle:themes:lily/templates/message_chat_transfer.html.twig' %}
 	    </script>
-    	    <script type="text/template" id="chat-message-ban">
+    	<script type="text/template" id="chat-message-ban">
         {% include 'LilyAppBundle:themes:lily/templates/message_chat_ban.html.twig' %}
+	    </script>
+	    <script type="text/template" id="chat-message-close">
+        {% include 'LilyAppBundle:themes:lily/templates/message_chat_close.html.twig' %}
 	    </script>
 	{% endblock %}
 
