--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/message_chat_transfer.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/message_chat_transfer.html.twig
@@ -1,10 +1,3 @@
-<div class="lily-msg-server">
-  <p class="lily-msg-server-title">
-    <%= msg %>
-  </p>
-  <p class="lily-msg-server-infos">
-    <span class="lily-msg-server-info"><%= info %></span>
-    <button class="lily-msg-server-action <%= userAction.class %>"><%= userAction.label %></button>
-  </p>
-  </p>
-</div>
+<p class="lily-msg-server-title">
+  <%= transfer_from.firstname %> <%= msg %> <%= transfer_to.firstname %>
+</p>
