--- a/src/Lily/UserBundle/Resources/views/Admin/Users/skeleton.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Admin/Users/skeleton.html.twig
@@ -4,8 +4,13 @@
     <div class="add-user">
       <button class="btn btn-sm btn-primary new-user">Ajouter un compte</button>
     </div>
+    <div class="btn-group groups-widget">
+    <!-- Button groups view -->
+    </div>
     <div class="btn-group sort-menu">
-      <button class="btn btn-sm btn-white dropdown-toggle" data-toggle="dropdown">Trier par <span class="caret"></span></button>
+      <button class="btn btn-sm btn-white dropdown-toggle" data-toggle="dropdown">
+        Trier par <span class="caret"></span>
+      </button>
       <ul class="dropdown-menu">
         <li data-criteria="lastname" class="active">Nom</li>
         <li data-criteria="roles">Permissions</li>
@@ -16,7 +21,8 @@
     </div>
     <div class="users-counter-container">
       <p class="users-counter"></p>
-      <p class="max-users-reached-alert" class="text-danger">Vous avez atteint la limite de création de comptes</p>
+      <p class="max-users-reached-alert" class="text-danger">
+        Vous avez atteint la limite de création de comptes</p>
     </div>
   </header>
   
