--- a/src/Lily/UserBundle/Resources/views/Admin/index.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Admin/index.html.twig
@@ -56,6 +56,9 @@
     <script type="text/template" id="usersModalTpl">
 	  {% include 'LilyUserBundle:Admin:Users/modal.html.twig' %}
     </script>
+    <script type="text/template" id="usersGroupsButtonTpl">
+	  {% include 'LilyUserBundle:Admin:Users/groups_button.html.twig' %}
+    </script>
     <!-- 
         Groups
     -->
