Disable users/groups button when no user selected

--- a/src/Lily/UserBundle/Resources/views/Admin/Users/groups_button.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Admin/Users/groups_button.html.twig
@@ -1,4 +1,4 @@
-  <button class="btn btn-sm btn-white dropdown-toggle">
+  <button class="btn btn-sm btn-white disabled dropdown-toggle">
     Attribuer un groupe <span class="caret"></span>
   </button>
   <ul class="dropdown-menu">
