Display users' groups & groups fix

--- a/src/Lily/ChatBundle/Resources/views/Operator/Dashboard/Connected/operator.html.twig
+++ b/src/Lily/ChatBundle/Resources/views/Operator/Dashboard/Connected/operator.html.twig
@@ -7,6 +7,10 @@
   </div>
   <div class="media-body">
     <div><a href="#"><%= firstname %> <%= lastname %></a></div>
-    <small class="text-muted"></small>
+    <small class="text-muted">
+      <% _.each(groups, function(group) { %>
+        <%= group %>
+      <% }); %>
+    </small>
   </div>
 </div>
