--- a/src/Lily/ChatBundle/Resources/views/Operator/Live/Modals/Transfer/operator.html.twig
+++ b/src/Lily/ChatBundle/Resources/views/Operator/Live/Modals/Transfer/operator.html.twig
@@ -5,7 +5,11 @@
   </div>
   <div class="media-body">
     <div><a><%= firstname %> <%= lastname %></a></div>
-    <small class="text-muted"></small>
+    <small class="text-muted">
+      <% _.each(groups, function(group) { %>
+        <%= group %>
+      <% }); %>
+    </small>
   </div>
 </div>
 
