reduce icon fix

--- a/src/Lily/AppBundle/Resources/views/themes/lily/index.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/index.html.twig
@@ -28,7 +28,7 @@
 	<div id="lily-toolbar" class="lily-cst-toolbar">
 		<span id="lily-toolbar-name" class="lily-cst-toolbar-name">{{ config.avi.name }}</span>
 		<div id="lily-toolbar-icons" class="lily-cst-toolbar-icons">
-		  <i class="lily-icon lily-icon-reduce"></i>
+		  <div class="lily-icon-reduce"></div>
 		</div>
 	</div>
 	<div id='lily-menu' class="snap-drawer snapdrawer-left scrollable lily-cts-menu"><!-- wrapper pour menu -->
