--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/mail.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/mail.html.twig
@@ -1,14 +1,14 @@
-<div class="lily-page-cont"> <!--wrapper page les différentes pages--> 
+<div class="lily-page-cont"> <!--wrapper page les différentes pages-->
 	<header id="lily-header" class="lily-cst-header">
 	  <span class="lily-icon lily-left lily-bt-menu lily-icon-menu"></span>
 	</header>
-	<section class="lily-main-content">	
+	<section class="lily-main-content">
 	  <div class="lily-contact-form">
-		<p>Adresse e-mail <label class="from" style="display:none">Ce champ ne peut pas être vide.</label></p>
+		<p class="lily-contact-form-label">Adresse e-mail <label class="from" style="display:none">Ce champ ne peut pas être vide.</label></p>
 		<input id="from" class="lily-cst-form-color" type="text" name="from" placeholder="Votre adresse e-mail" size="30"/>
-		<p>Objet <label class="object" style="display:none">Ce champ ne peut pas être vide.</label></p>
+		<p class="lily-contact-form-label">Objet <label class="object" style="display:none">Ce champ ne peut pas être vide.</label></p>
 		<input id="object" class="lily-cst-form-color" type="text" name="object" placeholder="L'objet de votre demande" size="30"/>
-		<p>Message <label class="msg" style="display:none">Ce champ ne peut pas être vide.</label></p>
+		<p class="lily-contact-form-label">Message <label class="msg" style="display:none">Ce champ ne peut pas être vide.</label></p>
 		<textarea id="msg" class="lily-cst-form-color" type="text" name="msg" placeholder="Votre message" size="30"/>
 		<button class="lily-btn-submit-color">Envoyer</button>
 	  </div>
