--- a/web/css/app/lily.css
+++ b/web/css/app/lily.css
@@ -627,7 +627,7 @@ MESSAGES
 #chat-box-messages .lily-msg-chat-operator {
 	float: left;
 	margin-left: 55px;
-	margin-top: 15px;
+	margin-top: 10px;
 	border: solid 1px rgba(206, 206, 206, 0.8);
 	color: #424242;
 }
@@ -644,7 +644,7 @@ MESSAGES
   font-size: 12px;
   width: 200px;
 	text-align: center;
-	margin: 30px auto 0;
+	margin: 22px auto;
   font-style: italic;
   position: relative;
 }
@@ -661,11 +661,11 @@ MESSAGES
 }
 
 .lily-msg-server .lily-msg-server-title:before {
-	left: -30px;
+	left: -40px;
 }
 
 .lily-msg-server .lily-msg-server-title:after {
-	right: -30px;
+	right: -40px;
 }
 
 .lily-msg-server-action {
