--- a/src/Lily/BackOfficeBundle/Resources/views/header.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/header.html.twig
@@ -10,33 +10,32 @@
   </div>
   <div class="collapse navbar-collapse">
     <ul class="nav navbar-nav navbar-right">
-      
+
       {% if app.user.client.config.chat %}
-      <!--
+
       <li class="chat pull-left hidden-xs">
-        <a href="#" class="dropdown-toggle dk">
-          <span class="badge up bg-danger m-r-n-sm">2</span>
-          <i class="icon-comments-alt text-white"></i>
-        </a>
-      </li>
-      <li class="dropdown">
         <a href="#" class="dropdown-toggle dk" data-toggle="dropdown">
-          <i class="icon-stop status"></i>
-          Disponible
-          <b class="caret"></b>
+          <i class="icon-bell-alt text-white"></i>
+          <span class="badge up bg-danger m-l-n-sm"><%= notifications.count %></span>
         </a>
-        <ul class="dropdown-menu animated fadeInLeft">
-          <li>
-            <a href="#">Disponible</a>
-          </li>
-          <li>
-            <a href="#">Indisponible</a>
-          </li>
-        </ul>
+        <section class="dropdown-menu animated fadeInUp input-s-lg">
+          <section class="panel bg-white">
+            <header class="panel-heading">
+              <strong class="count-n"><%= notifications.countTitle %></strong>
+            </header>
+            <div class="list-group js-notifications-list">
+              <!-- Here go the notifications -->
+            </div>
+            <!-- <footer class="panel-footer text-sm">
+              <a href="#" class="pull-right"><i class="icon-cog"></i></a>
+              <a href="#">notifications.seeAllMessage</a>
+            </footer> -->
+          </section>
+        </section>
       </li>
-      -->
+
       {% endif %}
-      
+
       <li class="dropdown">
         <a href="#" class="dropdown-toggle dker" data-toggle="dropdown">
           <span class="thumb-sm avatar pull-left m-t-n-xs m-r-xs">
